fix gap between hp and statistics

--- a/css/deltagreen.css
+++ b/css/deltagreen.css
@@ -86,8 +86,6 @@ form.program-style{
 }
 */
 
-
-
 .old-paper-background{
   background: url("../assets/img/StainedPlainPaper10.webp") !important;
 }
@@ -134,6 +132,10 @@ form.program-style{
 
 .dg-red{
   color:rgb(117, 0, 0);
+}
+
+.bottom-margin-5px{
+  margin-bottom: 5px !important;
 }
 
 .grid-1col{
